--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ and real-time intelligent systems.
 <p>
 Email: <a href="mailto:msvahdatpour@gmail.com">msvahdatpour@gmail.com</a><br>
 LinkedIn: <a href="https://linkedin.com/in/msvahdatpour">LinkedIn Profile</a><br>
-Google Scholar: <a href="#">Google Scholar</a>
+Google Scholar: <a href="https://scholar.google.com/citations?user=lhLLrosAAAAJ&hl=en&oi=ao">Google Scholar</a>
 </p>
 
 </body>
